Navbar update now

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                     <!-- <a href="index.html"><img src="assets/images/logo/logo.png" alt=""></a> -->
                     <a href="index.html">
                       <img src="vendors/img/nav.png">
+                      <!-- <img src="vendors/img/change.png"> -->
                     </a>
                 </div>
                 <nav>
@@ -44,10 +45,10 @@
                     <a class="menu_btn" href="">Sign in</a></li>
                 </div>
                  
-                <!-- <div class="mobile_menu">
+                <div class="mobile_menu">
                     <span><i class="fas fa-bars open_nav"></i></span>
                     <span><i class="fas fa-times close_nav"></i></span>
-                </div> -->
+                </div>
             </div>
           </div>
     <!-- </div> -->
@@ -410,7 +411,9 @@ independent business</h2>
 
 
 
-
-    <script src="custom.js"></script>
+<script src="vendors/js/jquery.js"></script>
+    <script src="vendors/js/custom.js"></script>
+    
+    <!-- <script src="custom.js"></script> -->
   </body>
 </html>
