--- a/index.html
+++ b/index.html
@@ -310,6 +310,39 @@ independent business</h2>
           </p>
       </div>  
 
+<div class="payment_price_info">
+
+      <div class="payment_price_item">
+          <h2>Free</h2>
+          <h6>For personal use</h6>
+          <p>My lady bits and bobs cup of tea bubble and squeak brolly.</p>
+          <a href="#" class="payment_price_btn">Try this
+             <i class="fa-solid fa-arrow-right-long"></i
+              ></a>
+      </div>
+
+    <div class="payment_price_item center">
+          <h2>$29.00</h2>
+          <h6>For team use</h6>
+          <p>My lady bits and bobs cup of tea bubble and squeak brolly.</p>
+          <a href="#" class="payment_price_btn">Try this 
+            <i class="fa-solid fa-arrow-right-long"></i
+              ></a>
+    </div>
+
+    <div class="payment_price_item">
+            <h2>$59.00</h2>
+            <h6>For enterprise use</h6>
+            <p>My lady bits and bobs cup of tea bubble and squeak brolly.</p>
+            <a href="#" class="payment_price_btn btn_chancge">Try this 
+              <i class="fa-solid fa-arrow-right-long"></i
+              ></a>
+    </div>
+
+
+</div>
+
+
  </div>
 </section>
 
