update some portion

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 </div>
                 <nav>
                     <ul>
-                        <li><a href="index.html">Home</a></li>
+                        <li class="active"><a href="index.html">Home</a></li>
                         <li><a href="#about_section">Pages</a></li>
                         <li><a href="#service_section">Portfolio</a></li>
                         <li><a href="#portfolio">Shop</a></li>
@@ -253,6 +253,39 @@
 
    <!--End Payment Section three area  here -->
   <!--End Payment Section three area  here -->
+
+
+
+  <!--Start Satisfied client area here -->
+  <!--Start Satisfied client area here -->
+
+
+  <section class="all_client_feedback_section_area ">
+    <div class="container">
+
+       <div class="top_feeback_are sec_pad">
+             <h2>Satisfied Users</h2>
+             <p>We bring together everything
+                from balances and bills to your credit score and more.</p>
+       </div>     
+       <div class="feedbac_button">
+          <div class="first_feddback_btn">
+            <a href="#">  <i class="fa-solid fa-chevron-left btn_owl"></i>
+              </a>
+          </div>
+           <div class="first_feddback_btn">
+             <a href="#">
+                <i class="fa-solid fa-chevron-right btn_owl"></i>
+                </a>
+          </div>
+         
+       </div>
+    </div>
+  </section>
+
+
+  <!--End Satisfied client area  here -->
+  <!--End Satisfied client area  here -->
 
 
   <!--Start Thousand bussiness area  here -->
