updated some poriton

--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
      <!-- owl carousel css -->
 	<link rel="stylesheet" type="text/css" href="vendors/css/owl.carousel.min.css" media="all" />
 	<link rel="stylesheet" type="text/css" href="vendors/css/owl.theme.default.min.css" media="all" />
-    <link rel="stylesheet" href="vendors/css/style.css" />
-    <link rel="stylesheet" href="vendors/css/responsive.css" />
+
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
     />
+     <link rel="stylesheet" href="vendors/css/style.css" />
+    <link rel="stylesheet" href="vendors/css/responsive.css" />
     <title>SassLand</title>
   </head>
   <body>
@@ -287,7 +288,7 @@
 <!-- //single author feedback -->
 <!-- //single author feedback -->
 
-     <div class="item333 ">
+     <div class="item333  ">
           <div class="feedback_item_two ">
            <div class="feed_back_author">
 
@@ -303,6 +304,7 @@
 
 
               <div class="ratting">
+               
                         <a href="#"><i class="fa fa-star"></i></a>
                         <a href="#"><i class="fa fa-star"></i></a>
                         <a href="#"><i class="fa fa-star"></i></a>
@@ -315,8 +317,8 @@
             </div>
 
               <p class="client">Why I say old chap that is spiffing barney, nancy boy bleeder chimney pot Richard cheers the little rotter so I said, easy peasy buggered blower bevvy A bit of how's your father he nicked it arse over tit. Geeza the BBC bits.!!</p>
-              <div class="shap_one"></div>
-              <div class="shap_two"></div>
+              <!-- <div class="shap_one"></div>
+              <div class="shap_two"></div> -->
           </div>
 
            <div class="feedback_item_two">
@@ -346,8 +348,8 @@
             </div>
 
               <p class="client">Why I say old chap that is spiffing barney, nancy boy bleeder chimney pot Richard cheers the little rotter so I said, easy peasy buggered blower bevvy A bit of how's your father he nicked it arse over tit. Geeza the BBC bits.!!</p>
-              <div class="shap_one"></div>
-              <div class="shap_two"></div>
+              <!-- <div class="shap_one"></div>
+              <div class="shap_two"></div> -->
           </div>
 
            <div class="feedback_item_two">
@@ -377,8 +379,8 @@
             </div>
 
               <p class="client">Why I say old chap that is spiffing barney, nancy boy bleeder chimney pot Richard cheers the little rotter so I said, easy peasy buggered blower bevvy A bit of how's your father he nicked it arse over tit. Geeza the BBC bits.!!</p>
-              <div class="shap_one"></div>
-              <div class="shap_two"></div>
+              <!-- <div class="shap_one"></div>
+              <div class="shap_two"></div> -->
           </div>
 
     </div> 
